packages/isar_plus/test/errors/class/constructor_wrong_parameter.dart
// constructor parameter type does not match property type

import 'package:isar_plus/isar_plus.dart';

@collection
class Model {
  Model(int prop1);

  late int id;

  String prop1 = '5';
}
